href link added to indexthml, listshtml created

--- a/lists.html
+++ b/lists.html
@@ -9,8 +9,7 @@
   </head>
   <body>
     <main>
-        <h1>Woodford Barn Task Lists</h1>
-        <a href="http://127.0.0.1:5500/lists.html"><h2>Enter</h2></a>
+        <h1>Work Areas</h1>
     </main>
 	<script src="main.js"></script>
   </body>
